--- a/code/Other2/Other2.vcxproj
+++ b/code/Other2/Other2.vcxproj
@@ -167,61 +167,102 @@
   <ItemGroup>
     <ClInclude Include="Allocator.h" />
     <ClInclude Include="AreaAllocator.h" />
+    <ClInclude Include="Attribute.h" />
     <ClInclude Include="AutoPtr.h" />
     <ClInclude Include="BoundingBox.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="Condition.h" />
+    <ClInclude Include="Decompress.h" />
+    <ClInclude Include="Event.h" />
+    <ClInclude Include="File.h" />
+    <ClInclude Include="FileSystem.h" />
     <ClInclude Include="Frustum.h" />
     <ClInclude Include="Hash.h" />
     <ClInclude Include="HashMap.h" />
     <ClInclude Include="HashSet.h" />
+    <ClInclude Include="Image.h" />
     <ClInclude Include="IntRect.h" />
     <ClInclude Include="IntVector2.h" />
     <ClInclude Include="Iterator.h" />
+    <ClInclude Include="JSONFile.h" />
+    <ClInclude Include="JSONValue.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Matrix3.h" />
     <ClInclude Include="Matrix3x4.h" />
     <ClInclude Include="Matrix4.h" />
+    <ClInclude Include="MemoryBuffer.h" />
+    <ClInclude Include="Mutex.h" />
+    <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjectRef.h" />
+    <ClInclude Include="ObjectResolver.h" />
     <ClInclude Include="Pair.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Polyhedron.h" />
+    <ClInclude Include="Profiler.h" />
     <ClInclude Include="Ptr.h" />
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="Rect.h" />
+    <ClInclude Include="Resource.h" />
+    <ClInclude Include="ResourceCache.h" />
+    <ClInclude Include="ResourceRef.h" />
+    <ClInclude Include="Serializable.h" />
     <ClInclude Include="Sort.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Stream.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="StringHash.h" />
     <ClInclude Include="Swap.h" />
+    <ClInclude Include="Thread.h" />
+    <ClInclude Include="ThreadLocalValue.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="Vector3.h" />
     <ClInclude Include="Vector4.h" />
+    <ClInclude Include="VectorBuffer.h" />
     <ClInclude Include="WString.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Allocator.cpp" />
     <ClCompile Include="AreaAllocator.cpp" />
+    <ClCompile Include="Attribute.cpp" />
     <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="Color.cpp" />
+    <ClCompile Include="Condition.cpp" />
+    <ClCompile Include="Decompress.cpp" />
+    <ClCompile Include="Event.cpp" />
+    <ClCompile Include="File.cpp" />
+    <ClCompile Include="FileSystem.cpp" />
     <ClCompile Include="Frustum.cpp" />
     <ClCompile Include="Hash.cpp" />
+    <ClCompile Include="Image.cpp" />
     <ClCompile Include="IntRect.cpp" />
     <ClCompile Include="IntVector2.cpp" />
+    <ClCompile Include="JSONFile.cpp" />
+    <ClCompile Include="JSONValue.cpp" />
     <ClCompile Include="List.cpp" />
     <ClCompile Include="Matrix3.cpp" />
     <ClCompile Include="Matrix3x4.cpp" />
     <ClCompile Include="Matrix4.cpp" />
+    <ClCompile Include="MemoryBuffer.cpp" />
+    <ClCompile Include="Mutex.cpp" />
+    <ClCompile Include="Object.cpp" />
+    <ClCompile Include="ObjectResolver.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Polyhedron.cpp" />
+    <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="Ptr.cpp" />
     <ClCompile Include="Quaternion.cpp" />
     <ClCompile Include="Random.cpp" />
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="Rect.cpp" />
+    <ClCompile Include="Resource.cpp" />
+    <ClCompile Include="ResourceCache.cpp" />
+    <ClCompile Include="ResourceRef.cpp" />
+    <ClCompile Include="Serializable.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -229,12 +270,16 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Stream.cpp" />
     <ClCompile Include="String.cpp" />
     <ClCompile Include="StringHash.cpp" />
+    <ClCompile Include="Thread.cpp" />
+    <ClCompile Include="ThreadLocalValue.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="Vector2.cpp" />
     <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="Vector4.cpp" />
+    <ClCompile Include="VectorBuffer.cpp" />
     <ClCompile Include="WString.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
